Fixed br spacing again. Now should work

--- a/static/blog/styles.css
+++ b/static/blog/styles.css
@@ -40,7 +40,7 @@ p {
 }
 
 br {
-	margin-bottom: 15px;
+	line-height: 2;
 }
 
 h1 {
